--- a/docs/PacketFence_Clustering_Guide.asciidoc
+++ b/docs/PacketFence_Clustering_Guide.asciidoc
@@ -39,19 +39,19 @@ First, you will need to install Percona Xtrabackup for the synchronization to wo
   # yum install http://www.percona.com/downloads/percona-release/redhat/0.1-3/percona-release-0.1-3.noarch.rpm
   # yum install percona-xtrabackup socat
 
-If you use the `/usr/local/pf/addons/database-backup-and-maintenance.sh` script, this will now enabled the Percona Xtrabackup mode. In order for it to work correctly, you should configure your installation as described in section '15.3.6. Using Percona XtraBackup' of the Administration guide.
+If you use the `/usr/local/pf/addons/database-backup-and-maintenance.sh` script, this will have enabled the Percona Xtrabackup mode. In order for the backups to still work correctly, you should configure your installation as described in section '15.3.6. Using Percona XtraBackup' of the Administration guide.
 
 Configuring Galera
 ^^^^^^^^^^^^^^^^^^
 
 For the next steps, you want to make sure that you didn't configure anything in `/usr/local/pf/conf/cluster.conf`. If you already did, comment all the configuration in the file and do a configreload (`/usr/local/pf/bin/pfcmd configreload hard`).
 
-On the first server of your cluster
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Setup on the first server of your cluster
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 First, start packetfence-mariadb and make sure it was able to start in 'standalone' mode.
 
-  # systemctl start packetfence-mariadb
+  # service packetfence-mariadb start
 
 Then, secure your installation
 
@@ -78,13 +78,17 @@ Next, you need to remove the empty users from your MySQL database:
 Step 2 : Server configuration
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-First, you need to make sure the interfaces name will be the same on both servers. See 'Setting the interfaces name on CentOS 7' in the Appendix section of this document if all your servers don't already have the same interface names.
+First, you need to make sure the interfaces name will be the same on all servers. See 'Setting the interfaces name on CentOS 7' in the Appendix section of this document if all your servers don't already have the same interface names.
 
 Next, you will need to configure the server so the services can bind on IP addresses they don't currently have configured. This allows faster failover of the services.
 
 On all your servers, add the following line in `/etc/sysctl.conf` and then reload with 'sysctl -p'
 
   net.ipv4.ip_nonlocal_bind = 1
+
+Then, disable the default MariaDB systemd service unit as PacketFence already provides one (packetfence-mariadb)
+
+  # systemctl disable packetfence-mariadb
 
 Now, on the first server, create the PEM that combines the key and certificate for the http services. Adapt to your own paths if you are using different certificates. What matters is that the path to the PEM file should be /usr/local/pf/conf/ssl/server.pem since HAProxy will expect it to be there.
 
@@ -121,7 +125,7 @@ host=127.0.0.1
 
 Now, reload the configuration and restart packetfence-config. You will see errors related to a cache write issue but you can safely ignore it for now. These appear because packetfence-config cannot connect to the database yet.
 
-  # systemctl restart packetfence-config
+  # service packetfence-config restart
   # /usr/local/pf/bin/pfcmd configreload hard
 
 Going through the configurator
@@ -129,7 +133,7 @@ Going through the configurator
 
 Now, on the first server of your cluster, you should go through the configurator, configuring the server as if it was in standalone (no HA interfaces). You should leave the services stopped at the end of the configurator.
 
-On the other servers of your cluster, configure only the network interfaces without going past that section in the configurator.
+On the other servers of your cluster, configure only the network interfaces without going past that section in the configurator. If the other servers already have the right IP addresses configured on their interfaces, you can ignore this step.
 
 Step 3 : Create a new cluster
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -245,9 +249,9 @@ Then make sure the packetfence clustering services will be started at boot by ru
 
 You should now restart packetfence-mariadb on the first server so that it now starts in clustered mode. Note that it will fail to start properly until at least one of the other node is alive (pingable). Once an alive quorum is reached it will be able to create a new cluster.
 
- # systemctl restart packetfence-mariadb
+ # service packetfence-mariadb restart
 
-NOTE: If the cluster is unable to get created properly, it may be because the other nodes have their MariaDB service running. Make sure you stop it on all nodes except the first one for now (`systemctl stop packetfence-mariadb`).
+NOTE: If the cluster is unable to get created properly, it may be because the other nodes have their MariaDB service running. Make sure you stop it on all nodes except the first one for now (`service packetfence-mariadb stop` and `service mariadb stop`).
 
 If no error is found in the previous configuration, the previous restart of packetfence should have started keepalived and radiusd-loadbalancer along with the other services.
 
@@ -258,13 +262,26 @@ Step 4: Integrating the two other nodes
 
 Now, you will need to integrate your 2 other nodes in your cluster.
 
-Base sync
-^^^^^^^^^
+Webservices configuration
+^^^^^^^^^^^^^^^^^^^^^^^^^
 
-Get the webservices user and password on the master node in 'Configuration/Web Services'
-If there's none, set the user, password and then restart httpd.webservices on the first server.
+First, set the webservices user and password on the master node in 'Configuration/Web Services'. There should be a sync error you can safely ignore as the other servers of your cluster aren't joined yet.
 
-Do (and make sure it does it without any errors) :
+Once this is done, stop packetfence-mariadb on the first server (should be the only one that had it running):
+
+  # service packetfence-mariadb stop
+
+And restart packetfence-config and packetfence-httpd.webservices on the first server:
+
+  # service packetfence-config restart
+  # /usr/local/pf/bin/pfcmd service httpd.webservices restart
+
+Sync the nodes
+^^^^^^^^^^^^^^
+
+The following instructions have to be done on each server that will be joined in the cluster.
+
+Do (and make sure it completes without any errors):
 
   # /usr/local/pf/bin/cluster/sync --from=192.168.1.5 --api-user=packet --api-password=fence
 
@@ -288,13 +305,17 @@ Make sure that this server is binding to it's own management address. If it's no
 MariaDB sync
 ^^^^^^^^^^^^
 
-Now, flush any MySQL data you have on this node and restart packetfence-mariadb so that the servers join the cluster.
+First, ensure you now start packetfence-mariadb. Again this can take up to 5 minutes to start since its an initial cluster creation.
+
+  service packetfence-mariadb start
+
+Now, flush any MySQL data you have on the new node and restart packetfence-mariadb so that the servers join the cluster.
 
 WARNING: If you have any data in MySQL on this node, this will destroy it.
 
   # rm -fr /var/lib/mysql/*
 
-  # systemctl restart packetfence-mariadb
+  # service packetfence-mariadb restart
 
 Checking the MariaDB sync
 +++++++++++++++++++++++++
@@ -304,6 +325,7 @@ In order to check the MariaDB sync, you can look at the status of the wsrep stat
   mysql> show status like 'wsrep%';
 
 Important variables:
+
   * 'wsrep_cluster_status': Display whether or not the node is part of a primary view or not. A healthy cluster should always show as primary
   * 'wsrep_incoming_addresses': The current members of the cluster. All the nodes of your cluster should be listed there.
   * 'wsrep_local_state_comment': Current sync state of the cluster. A healthy state is 'Synced'. Refer to the Galera cluster documentation for the meaning of the other values this can have.
@@ -319,13 +341,17 @@ Now start packetfence
 
 Next, make sure to join domains through 'Configuration/Domains' on each node.
 
+Disable the access to the configurator by setting the currently-at:
+
+  # /usr/local/pf/bin/pfcmd version > /usr/local/pf/conf/currently-at
+
 Step 5: Securing the cluster
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 Keepalived secret
 ^^^^^^^^^^^^^^^^^
 
-It is highly recommended to modify the keepalive shared secret in your cluster to prevent attacks. In the administration interface, go in 'Configuration/Clustering' and change the 'Shared KEY'. Make sure you restart keepalived on both your servers using `/usr/local/pf/bin/pfcmd service keepalived restart`
+It is highly recommended to modify the keepalive shared secret in your cluster to prevent attacks. In the administration interface, go in 'Configuration/Clustering' and change the 'Shared KEY'. Make sure you restart keepalived on all your servers using `/usr/local/pf/bin/pfcmd service keepalived restart`
 
 Understanding the Galera cluster synchronization
 ------------------------------------------------
@@ -341,7 +367,7 @@ A loss of quorum is when a server is not able to be part of a group that represe
 
 The Galera cluster stack will check in permanence that it has a quorum. Should one of the server be part of a group that doesn't have the quorum in the cluster, it will put itself in read-only mode and stop the synchronization. During that time, your PacketFence installation will continue working but with some features disabled.
 
- * RADIUS Mac Authentication: Will continue working and will return RADIUS attributes associated with the role that is registered in the database. If VLAN or RADIUS filters can apply to this device, they will be but any role change will not be persisted.
+ * RADIUS MAC Authentication: Will continue working and will return RADIUS attributes associated with the role that is registered in the database. If VLAN or RADIUS filters can apply to this device, they will but any role change will not be persisted.
  * RADIUS 802.1x: Will continue working and if 'Dot1x recompute role from portal' is enabled, it will compute the role using the available authentication sources but will not save it in the database at the end of the request. If this parameter is disabled, it will behave like MAC Authentication. VLAN and RADIUS filters will still apply for the connections. If any of your sources are external (LDAP, AD, RADIUS, ...), they must be available for the request to complete successfully.
  * Captive portal: The captive portal will be disabled and display a message stating the system is currently experiencing an issue.
  * DHCP listeners: The DHCP listeners will be disabled and packets will not be saved in the database. This also means Firewall SSO will not work during that time.
@@ -378,7 +404,7 @@ If one of the nodes cannot recover, you can manually reset the cluster state. No
 
 First, stop packetfence-mariadb on all servers:
 
-  # systemctl stop packetfence-mariadb
+  # service packetfence-mariadb stop
 
 Then remove `/var/lib/mysql/gvwstate.dat` on all the servers that are still alive.
 
