--- a/docs/PacketFence_MobileIron_Quick_Install_Guide.asciidoc
+++ b/docs/PacketFence_MobileIron_Quick_Install_Guide.asciidoc
@@ -87,10 +87,10 @@ Replace `accountName` by your real account/instance name at MobileIron.
 * IOS devices: `https://m.mobileiron.net/accountName/c/d/ios.html`
 * Windows: `https://m.mobileiron.net/accountName/EnrollmentServer/Discovery.svc`
 
-Add the provisioner to the portal profile
+Add the provisioner to the connection profile
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 In order for the provisioner to be used by your captive portal you need to add it in its configuration.
-Go in 'Portal Profiles', then select the portal you want to modify and add 'mobileiron' as a provisioner.
+Go in 'Connection Profiles', then select the portal you want to modify and add 'mobileiron' as a provisioner.
 
 image::docs/images/mobile-iron-portal.png[scaledwidth="100%",alt="MobileIron portal"]
 
